fixed some gap issues

--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ p {
 .hero {
   display: grid;
   grid-template-columns: 1.2fr 1fr;
-  column-gap: var(--space-lg);
+  gap: var(--space-lg);
   align-items: center;
 }
 
@@ -140,7 +140,6 @@ p {
 }
 
 .hero-location {
-  margin-bottom: var(--space-sm);
   grid-column: 1/2;
 }
 
@@ -290,7 +289,7 @@ p {
   /* HERO */
   .hero {
     grid-template-columns: 1fr;
-    column-gap: var(--space-md);
+    gap: var(--space-md);
     display: grid;
   }
 
